test/fail/lambdas/lambda_return.lly
#[
SyntaxError: 'return' not allowed in a lambda.
Where: File "lambda_return.lly" at line 6
]#

var v = {|| return }
